Significant upgrade to API v30.0 (Spring'14)
Blog and update to README to follow with full details

--- a/apex-mdapi/src/classes/MetadataDeployController.cls
+++ b/apex-mdapi/src/classes/MetadataDeployController.cls
@@ -101,8 +101,8 @@ public with sharing class MetadataDeployController
 				ApexPages.addMessage(new ApexPages.Message(ApexPages.Severity.Info, 'Deployment complete'));
 
 				// Deployment errors?
-				MetadataService.DeployResult deployResult = service.checkDeployStatus(AsyncResult.Id);
-				for(MetadataService.DeployMessage deployMessage : deployResult.messages)
+				MetadataService.DeployResult deployResult = service.checkDeployStatus(AsyncResult.Id, false);
+				for(MetadataService.DeployMessage deployMessage : deployResult.details.componentFailures)
 					if(deployMessage.problem!=null)
 						ApexPages.addMessage(
 							new ApexPages.Message(ApexPages.Severity.Error, 
