--- a/apex-mdapi/src/classes/MetadataServiceTest.cls
+++ b/apex-mdapi/src/classes/MetadataServiceTest.cls
@@ -76,7 +76,7 @@ private class MetadataServiceTest
         MetadataService.MetadataPort metaDataPort = new MetadataService.MetadataPort();
         metaDataPort.create(null);
         metaDataPort.deleteMetadata(null);
-        metaDataPort.updateMetadata(null);		
+        metaDataPort.updateMetadata(new MetadataService.UpdateMetadata[]{});		
 	}
 	
 	@IsTest
@@ -89,14 +89,13 @@ private class MetadataServiceTest
         // Invoke operations         
         MetadataService.MetadataPort metaDataPort = new MetadataService.MetadataPort();
         metaDataPort.retrieve(null);
-        metaDataPort.checkDeployStatus(null);
-        metaDataPort.updateMetadata(null);
+        metaDataPort.checkDeployStatus(null, false);
         metaDataPort.listMetadata(null, null);
         metaDataPort.checkStatus(null);
         metaDataPort.describeMetadata(null);
         metaDataPort.checkRetrieveStatus(null);
         metaDataPort.deploy(null, null);
-        metaDataPort.checkDeployStatus(null);
+        metaDataPort.checkDeployStatus(null, false);
     }
         
 	@IsTest
@@ -193,7 +192,6 @@ private class MetadataServiceTest
         new MetadataService.RunTestSuccess();
         new MetadataService.Queue();
         new MetadataService.LeadSharingRules();
-        new MetadataService.NamedFilter();
         new MetadataService.ListViewFilter();
         new MetadataService.CampaignOwnerSharingRule();
         new MetadataService.checkStatusResponse_element();
@@ -267,13 +265,11 @@ private class MetadataServiceTest
         new MetadataService.DataCategoryGroup();
         new MetadataService.listMetadata_element();
         new MetadataService.ValidationRule();
-        new MetadataService.NamedFilterTranslation();
         new MetadataService.WorkspaceMapping();
         new MetadataService.MetadataWithContent();
         new MetadataService.ValidationRuleTranslation();
         new MetadataService.AccountTerritorySharingRule();
         new MetadataService.Metadata();
-        new MetadataService.ConsoleComponent();
         new MetadataService.ReportBucketFieldValue();
         new MetadataService.OpportunitySharingRules();
         new MetadataService.HomePageLayout();
@@ -464,7 +460,6 @@ private class MetadataServiceTest
 		new MetadataService.Approver();
 		new MetadataService.SamlSsoConfig();
 		new MetadataService.ApprovalSubmitter();
-		new MetadataService.DataSourceSettings();
 		new MetadataService.KeyboardShortcuts();
 		new MetadataService.ApprovalStep();
 		new MetadataService.AgentConfigAssignments();
@@ -488,5 +483,275 @@ private class MetadataServiceTest
 		new MetadataService.NetworkMemberGroup();
 		new MetadataService.FindSimilarOppFilter();
 		new MetadataService.QuickActionTranslation();				
+        new MetadataService.WorkflowFlowActionParameter();
+        new MetadataService.ConnectedAppOauthConfig();
+        new MetadataService.FlowLoop();
+        new MetadataService.UserSharingRules();
+        new MetadataService.renameMetadata_element();
+        new MetadataService.ForecastingTypeSettings();
+        new MetadataService.PermissionSetApplicationVisibility();
+        new MetadataService.FeedLayout();
+        new MetadataService.AppMenuItem();
+        new MetadataService.deleteMetadataResponse_element();
+        new MetadataService.ConnectedAppAttribute();
+        new MetadataService.ReportChartComponentLayoutItem();
+        new MetadataService.AppMenu();
+        new MetadataService.ConnectedAppIpRange();
+        new MetadataService.Error();
+        new MetadataService.ComponentInstanceProperty();
+        new MetadataService.BusinessHoursEntry();
+        new MetadataService.RelatedContent();
+        new MetadataService.SupervisorAgentConfigSkills();
+        new MetadataService.ComponentInstance();
+        new MetadataService.SidebarComponent();
+        new MetadataService.Holiday();
+        new MetadataService.SaveResult();
+        new MetadataService.readMetadataResponse_element();
+        new MetadataService.FlexiPageRegion();
+        new MetadataService.deleteMetadata_element();
+        new MetadataService.ConnectedAppMobileDetailConfig();
+        new MetadataService.AccountSettings();
+        new MetadataService.PermissionSetRecordTypeVisibility();
+        new MetadataService.OrderSettings();
+        new MetadataService.ProfileUserPermission();
+        new MetadataService.UserCriteriaBasedSharingRule();
+        new MetadataService.LookupFilterTranslation();
+        new MetadataService.WorkflowFlowAction();
+        new MetadataService.ConnectedApp();
+        new MetadataService.SiteDotCom();
+        new MetadataService.createMetadataResponse_element();
+        new MetadataService.updateMetadata_element();
+        new MetadataService.LookupFilter();
+        new MetadataService.updateMetadataResponse_element();
+        new MetadataService.FlexiPage();
+        new MetadataService.ConnectedAppSamlConfig();
+        new MetadataService.createMetadata_element();
+        new MetadataService.FeedLayoutComponent();
+        new MetadataService.PostTemplate();
+        new MetadataService.RelatedContentItem();
+        new MetadataService.readMetadata_element();
+        new MetadataService.ReadWorkflowRuleResult();
+        new MetadataService.readWorkflowRuleResponse_element();
+        new MetadataService.ReadSamlSsoConfigResult();
+        new MetadataService.readSamlSsoConfigResponse_element();
+        new MetadataService.ReadCustomLabelResult();
+        new MetadataService.readCustomLabelResponse_element();
+        new MetadataService.ReadBusinessHoursEntryResult();
+        new MetadataService.readBusinessHoursEntryResponse_element();
+        new MetadataService.ReadMobileSettingsResult();
+        new MetadataService.readMobileSettingsResponse_element();
+        new MetadataService.ReadChatterAnswersSettingsResult();
+        new MetadataService.readChatterAnswersSettingsResponse_element();
+        new MetadataService.ReadSharingRulesResult();
+        new MetadataService.readSharingRulesResponse_element();
+        new MetadataService.ReadPortalResult();
+        new MetadataService.readPortalResponse_element();
+        new MetadataService.ReadSkillResult();
+        new MetadataService.readSkillResponse_element();
+        new MetadataService.ReadEscalationRulesResult();
+        new MetadataService.readEscalationRulesResponse_element();
+        new MetadataService.ReadCustomDataTypeResult();
+        new MetadataService.readCustomDataTypeResponse_element();
+        new MetadataService.ReadExternalDataSourceResult();
+        new MetadataService.readExternalDataSourceResponse_element();
+        new MetadataService.ReadEntitlementProcessResult();
+        new MetadataService.readEntitlementProcessResponse_element();
+        new MetadataService.ReadRecordTypeResult();
+        new MetadataService.readRecordTypeResponse_element();
+        new MetadataService.ReadScontrolResult();
+        new MetadataService.readScontrolResponse_element();
+        new MetadataService.ReadDataCategoryGroupResult();
+        new MetadataService.readDataCategoryGroupResponse_element();
+        new MetadataService.ReadValidationRuleResult();
+        new MetadataService.readValidationRuleResponse_element();
+        new MetadataService.ReadProfileResult();
+        new MetadataService.readProfileResponse_element();
+        new MetadataService.ReadIdeasSettingsResult();
+        new MetadataService.readIdeasSettingsResponse_element();
+        new MetadataService.ReadConnectedAppResult();
+        new MetadataService.readConnectedAppResponse_element();
+        new MetadataService.ReadApexPageResult();
+        new MetadataService.readApexPageResponse_element();
+        new MetadataService.ReadProductSettingsResult();
+        new MetadataService.readProductSettingsResponse_element();
+        new MetadataService.ReadLiveAgentSettingsResult();
+        new MetadataService.readLiveAgentSettingsResponse_element();
+        new MetadataService.ReadOpportunitySettingsResult();
+        new MetadataService.readOpportunitySettingsResponse_element();
+        new MetadataService.ReadLiveChatDeploymentResult();
+        new MetadataService.readLiveChatDeploymentResponse_element();
+        new MetadataService.ReadActivitiesSettingsResult();
+        new MetadataService.readActivitiesSettingsResponse_element();
+        new MetadataService.ReadLayoutResult();
+        new MetadataService.readLayoutResponse_element();
+        new MetadataService.ReadWebLinkResult();
+        new MetadataService.readWebLinkResponse_element();
+        new MetadataService.ReadSiteDotComResult();
+        new MetadataService.readSiteDotComResponse_element();
+        new MetadataService.ReadCompanySettingsResult();
+        new MetadataService.readCompanySettingsResponse_element();
+        new MetadataService.ReadHomePageLayoutResult();
+        new MetadataService.readHomePageLayoutResponse_element();
+        new MetadataService.ReadDashboardResult();
+        new MetadataService.readDashboardResponse_element();
+        new MetadataService.ReadAssignmentRulesResult();
+        new MetadataService.readAssignmentRulesResponse_element();
+        new MetadataService.ReadAnalyticSnapshotResult();
+        new MetadataService.readAnalyticSnapshotResponse_element();
+        new MetadataService.ReadEscalationRuleResult();
+        new MetadataService.readEscalationRuleResponse_element();
+        new MetadataService.ReadCustomSiteResult();
+        new MetadataService.readCustomSiteResponse_element();
+        new MetadataService.ReadGroupResult();
+        new MetadataService.readGroupResponse_element();
+        new MetadataService.ReadReportTypeResult();
+        new MetadataService.readReportTypeResponse_element();
+        new MetadataService.ReadQuickActionResult();
+        new MetadataService.readQuickActionResponse_element();
+        new MetadataService.ReadCustomPageWebLinkResult();
+        new MetadataService.readCustomPageWebLinkResponse_element();
+        new MetadataService.ReadApexComponentResult();
+        new MetadataService.readApexComponentResponse_element();
+        new MetadataService.ReadBaseSharingRuleResult();
+        new MetadataService.readBaseSharingRuleResponse_element();
+        new MetadataService.ReadEntitlementTemplateResult();
+        new MetadataService.readEntitlementTemplateResponse_element();
+        new MetadataService.ReadFlexiPageResult();
+        new MetadataService.readFlexiPageResponse_element();
+        new MetadataService.ReadWorkflowResult();
+        new MetadataService.readWorkflowResponse_element();
+        new MetadataService.ReadWorkflowActionResult();
+        new MetadataService.readWorkflowActionResponse_element();
+        new MetadataService.ReadAddressSettingsResult();
+        new MetadataService.readAddressSettingsResponse_element();
+        new MetadataService.ReadContractSettingsResult();
+        new MetadataService.readContractSettingsResponse_element();
+        new MetadataService.ReadCustomObjectResult();
+        new MetadataService.readCustomObjectResponse_element();
+        new MetadataService.ReadTranslationsResult();
+        new MetadataService.readTranslationsResponse_element();
+        new MetadataService.ReadRoleOrTerritoryResult();
+        new MetadataService.readRoleOrTerritoryResponse_element();
+        new MetadataService.ReadApexTriggerResult();
+        new MetadataService.readApexTriggerResponse_element();
+        new MetadataService.ReadCustomLabelsResult();
+        new MetadataService.readCustomLabelsResponse_element();
+        new MetadataService.ReadSecuritySettingsResult();
+        new MetadataService.readSecuritySettingsResponse_element();
+        new MetadataService.ReadCallCenterResult();
+        new MetadataService.readCallCenterResponse_element();
+        new MetadataService.ReadPicklistValueResult();
+        new MetadataService.readPicklistValueResponse_element();
+        new MetadataService.ReadRemoteSiteSettingResult();
+        new MetadataService.readRemoteSiteSettingResponse_element();
+        new MetadataService.ReadQuoteSettingsResult();
+        new MetadataService.readQuoteSettingsResponse_element();
+        new MetadataService.ReadSynonymDictionaryResult();
+        new MetadataService.readSynonymDictionaryResponse_element();
+        new MetadataService.ReadPostTemplateResult();
+        new MetadataService.readPostTemplateResponse_element();
+        new MetadataService.ReadCustomTabResult();
+        new MetadataService.readCustomTabResponse_element();
+        new MetadataService.ReadLetterheadResult();
+        new MetadataService.readLetterheadResponse_element();
+        new MetadataService.ReadInstalledPackageResult();
+        new MetadataService.readInstalledPackageResponse_element();
+        new MetadataService.ReadQueueResult();
+        new MetadataService.readQueueResponse_element();
+        new MetadataService.ReadAuthProviderResult();
+        new MetadataService.readAuthProviderResponse_element();
+        new MetadataService.ReadEntitlementSettingsResult();
+        new MetadataService.readEntitlementSettingsResponse_element();
+        new MetadataService.ReadCustomFieldResult();
+        new MetadataService.readCustomFieldResponse_element();
+        new MetadataService.ReadStaticResourceResult();
+        new MetadataService.readStaticResourceResponse_element();
+        new MetadataService.ReadEmailTemplateResult();
+        new MetadataService.readEmailTemplateResponse_element();
+        new MetadataService.ReadSharingReasonResult();
+        new MetadataService.readSharingReasonResponse_element();
+        new MetadataService.ReadLiveChatButtonResult();
+        new MetadataService.readLiveChatButtonResponse_element();
+        new MetadataService.ReadNetworkResult();
+        new MetadataService.readNetworkResponse_element();
+        new MetadataService.ReadApprovalProcessResult();
+        new MetadataService.readApprovalProcessResponse_element();
+        new MetadataService.ReadMilestoneTypeResult();
+        new MetadataService.readMilestoneTypeResponse_element();
+        new MetadataService.ReadAssignmentRuleResult();
+        new MetadataService.readAssignmentRuleResponse_element();
+        new MetadataService.ReadCompactLayoutResult();
+        new MetadataService.readCompactLayoutResponse_element();
+        new MetadataService.ReadLiveChatAgentConfigResult();
+        new MetadataService.readLiveChatAgentConfigResponse_element();
+        new MetadataService.ReadAccountSettingsResult();
+        new MetadataService.readAccountSettingsResponse_element();
+        new MetadataService.ReadBusinessProcessResult();
+        new MetadataService.readBusinessProcessResponse_element();
+        new MetadataService.ReadFlowResult();
+        new MetadataService.readFlowResponse_element();
+        new MetadataService.ReadAutoResponseRuleResult();
+        new MetadataService.readAutoResponseRuleResponse_element();
+        new MetadataService.ReadPermissionSetResult();
+        new MetadataService.readPermissionSetResponse_element();
+        new MetadataService.ReadBusinessHoursSettingsResult();
+        new MetadataService.readBusinessHoursSettingsResponse_element();
+        new MetadataService.ReadForecastingSettingsResult();
+        new MetadataService.readForecastingSettingsResponse_element();
+        new MetadataService.ReadReportResult();
+        new MetadataService.readReportResponse_element();
+        new MetadataService.ReadAppMenuResult();
+        new MetadataService.readAppMenuResponse_element();
+        new MetadataService.ReadListViewResult();
+        new MetadataService.readListViewResponse_element();
+        new MetadataService.ReadOrderSettingsResult();
+        new MetadataService.readOrderSettingsResponse_element();
+        new MetadataService.ReadCustomObjectTranslationResult();
+        new MetadataService.readCustomObjectTranslationResponse_element();
+        new MetadataService.ReadCustomApplicationResult();
+        new MetadataService.readCustomApplicationResponse_element();
+        new MetadataService.ReadKnowledgeSettingsResult();
+        new MetadataService.readKnowledgeSettingsResponse_element();
+        new MetadataService.ReadCaseSettingsResult();
+        new MetadataService.readCaseSettingsResponse_element();
+        new MetadataService.ReadApexClassResult();
+        new MetadataService.readApexClassResponse_element();
+        new MetadataService.ReadPackageResult();
+        new MetadataService.readPackageResponse_element();
+        new MetadataService.ReadCommunityResult();
+        new MetadataService.readCommunityResponse_element();
+        new MetadataService.ReadDocumentResult();
+        new MetadataService.readDocumentResponse_element();
+        new MetadataService.ReadAutoResponseRulesResult();
+        new MetadataService.readAutoResponseRulesResponse_element();
+        new MetadataService.ReadFolderResult();
+        new MetadataService.readFolderResponse_element();
+        new MetadataService.ReadCustomApplicationComponentResult();
+        new MetadataService.readCustomApplicationComponentResponse_element();
+        new MetadataService.ReadFieldSetResult();
+        new MetadataService.readFieldSetResponse_element();
+        new MetadataService.ReadSharingSetResult();
+        new MetadataService.readSharingSetResponse_element();
+        new MetadataService.ReadHomePageComponentResult();
+        new MetadataService.readHomePageComponentResponse_element();
+        new MetadataService.ReadResult();
+        new MetadataService.UserMembershipSharingRule();
+        new MetadataService.BusinessHoursSettings();
+        new MetadataService.FeedLayoutFilter();
+        new MetadataService.ReportHistoricalSelector();
+        new MetadataService.ConnectedAppCanvasConfig();
+        new MetadataService.DeployDetails();
+        new MetadataService.ReportDataCategoryFilter();
+        new MetadataService.SynonymGroup();
+        new MetadataService.renameMetadataResponse_element();
+        new MetadataService.cancelDeploy_element();
+        new MetadataService.CancelDeployResult();
+        new MetadataService.SynonymDictionary();
+        new MetadataService.cancelDeployResponse_element();
+        new MetadataService.CompactLayout();
+        new MetadataService.AccessMapping();
+        new MetadataService.Container();
+        new MetadataService.DeleteResult();
+        new MetadataService.SharingSet();
     }
 }
